--- a/liwos/index.html
+++ b/liwos/index.html
@@ -9,6 +9,7 @@
 		<title>Lierse Website voor Oudheidkundige Studies</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="google-site-verification" content="1XGLxKqg6-J6lnf9oryoCXRM5llvx9pd_kn_uxDIx00" />
 		<link rel="stylesheet" href="css/stijlhtml5.css" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<style>header h1 {color: hsl(0,0%,20%);}</style>
