--- a/liwos/catalan/cursus.htm
+++ b/liwos/catalan/cursus.htm
@@ -50,7 +50,7 @@ li {margin-left:50px;list-style-position:outside;}
 						<ul>
 							<li><a href="../index.html">Home</a></li>
 							<li><a href="cataltxt.htm">Catalaanse teksten</a></li>
-							<li><a href="occitxt.htm">Occitaanse teksten</a></li>
+							<li><a href="occitext.htm">Occitaanse teksten</a></li>
 						</ul>
 					</nav>
 
