--- a/liwos/latin/conques.htm
+++ b/liwos/latin/conques.htm
@@ -41,7 +41,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="../index.html">Home</a></li>
-							<li><a href="latin.htm">Latijnse teksten</a></li>
+							<li><a href="../latin/latin.htm">Latijnse teksten</a></li>
 							
 						</ul>
 					</nav>
