--- a/liwos/latin/hymne.htm
+++ b/liwos/latin/hymne.htm
@@ -42,7 +42,7 @@ Ambrosius en Prudentius (kunsthistorisch essay)</title>
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="../index.html">Home</a></li>
-							<li><a href="../latin.htm">Latijnse teksten</a></li>
+							<li><a href="../latin/latin.htm">Latijnse teksten</a></li>
 							
 						</ul>
 					</nav>
