--- a/liwos/latin/kubus.htm
+++ b/liwos/latin/kubus.htm
@@ -41,10 +41,9 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="../index.html">Home</a></li>
+							<li><a href="../latin/latin.htm">Latijnse teksten</a></li>
 							<li><a href="pythagor.htm">Pythagoras</a></li>
-							<li><a href="../generic.html">Tempus etiam</a></li>
-							<li><a href="../generic.html">Consequat dolor</a></li>
-							<li><a href="../elements.html">Elements</a></li>
+							
 						</ul>
 					</nav>
 
