--- a/liwos/latin/pythagor.htm
+++ b/liwos/latin/pythagor.htm
@@ -41,6 +41,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="../index.html">Home</a></li>
+							<li><a href="../latin/latin.htm">Latijnse teksten</a></li>
 							<li><a href="kubus.htm">Verdubbeling kubus</a></li>
 							
 						</ul>
