--- a/liwos/latin/vaison.htm
+++ b/liwos/latin/vaison.htm
@@ -47,7 +47,7 @@ ul {list-style-type: none}
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="../index.html">Home</a></li>
-							<li><a href="../latin.htm">Latijnse teksten</a></li>
+							<li><a href="../latin/latin.htm">Latijnse teksten</a></li>
 							
 						</ul>
 					</nav>
