--- a/liwos/catalan/cataltxt.htm
+++ b/liwos/catalan/cataltxt.htm
@@ -41,7 +41,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="../index.html">Home</a></li>
-							<li><a href="occitxt.htm">Occitaanse teksten</a></li>
+							<li><a href="occitext.htm">Occitaanse teksten</a></li>
 							<li><a href="cursus.htm">Basiscursus Catalaans</a></li>
 						</ul>
 					</nav>
