--- a/liwos/catalan/vinzelle.htm
+++ b/liwos/catalan/vinzelle.htm
@@ -45,7 +45,7 @@ span {float: right;font-size: 80%;text-align: right;}
 						<ul>
 							<li><a href="../index.html">Home</a></li>
 							<li><a href="cataltxt.htm">Catalaanse teksten</a></li>
-							<li><a href="occitxt.htm">Occitaanse teksten</a></li>
+							<li><a href="occitext.htm">Occitaanse teksten</a></li>
 						</ul>
 					</nav>
 
