--- a/liwos/catalan/marcoles.htm
+++ b/liwos/catalan/marcoles.htm
@@ -42,7 +42,7 @@
 						<ul>
 							<li><a href="../index.html">Home</a></li>
 							<li><a href="cataltxt.htm">Catalaanse teksten</a></li>
-							<li><a href="occitxt.htm">Occitaanse teksten</a></li>
+							<li><a href="occitext.htm">Occitaanse teksten</a></li>
 						</ul>
 					</nav>
 
