--- a/liwos/catalan/cursus.htm
+++ b/liwos/catalan/cursus.htm
@@ -21,7 +21,7 @@ table tbody tr:nth-child(odd) {background-color: #32cd32}
 table tbody tr:nth-child(even) {background-color: #90ee90}
 li {margin-left:50px;list-style-position:outside;}
 </style>
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
