--- a/liwos/catalan/irregul.htm
+++ b/liwos/catalan/irregul.htm
@@ -16,7 +16,7 @@
 dd {font-style:italic;line-height:150%} span {font-style:italic;font-weight:bold;color:green} dt {line-height:150%} 
 dd,span,dt {font-size: 90%}
 </style>
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
