--- a/liwos/catalan/pronoms.htm
+++ b/liwos/catalan/pronoms.htm
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<style>table tr th, table tr td {padding: 6px;border: 1px dotted black;text-align: center;vertical-align: middle;}
 			caption {font-size: 110%;font-style: italic;padding: 6px;}</style>
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript> 
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript> 
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
