--- a/liwos/catalan/vinzelle.htm
+++ b/liwos/catalan/vinzelle.htm
@@ -16,7 +16,7 @@
 p.poem {text-align:left;width: 900px;margin-left: auto;margin-right: auto;}
 span {float: right;font-size: 80%;text-align: right;}
 </style>
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
