--- a/liwos/latin/hymne.htm
+++ b/liwos/latin/hymne.htm
@@ -14,7 +14,7 @@ Ambrosius en Prudentius (kunsthistorisch essay)</title>
 		<link href="../css/stijlhtml5.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<style>p.poem {text-align:left;width: 400px;margin-left: auto;margin-right: auto}</style>
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
