--- a/liwos/latin/vaison.htm
+++ b/liwos/latin/vaison.htm
@@ -13,13 +13,13 @@
 		<link href="../css/stijlhtml5.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<style>
-img {display: block; padding:3px 8px;} 
+img, aside {display: block; padding:3px 8px;} 
 td {width:10%;text-align:center;border:1px solid;}
 table {width:20%;border:1px solid;margin:20px;font-size: 100%;}
 aside h3 {text-indent:1em;}
 ul {list-style-type: none}
 </style>
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
