--- a/liwos/latin/heraclit.htm
+++ b/liwos/latin/heraclit.htm
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<style>p.spreuk {color:green}</style>
 		
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
