--- a/liwos/latin/plinius.htm
+++ b/liwos/latin/plinius.htm
@@ -13,7 +13,7 @@
 		<link href="../css/stijlhtml5.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<style>article section {border: thin solid blue;margin-bottom: 16px;padding:3px 8px;}</style>
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
