--- a/liwos/latin/pompeius.htm
+++ b/liwos/latin/pompeius.htm
@@ -13,7 +13,7 @@
 		<link href="../css/stijlhtml5.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
 				
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
