--- a/liwos/sagalas/plan.htm
+++ b/liwos/sagalas/plan.htm
@@ -28,7 +28,7 @@ div.container img {padding: 0px;margin: 0px}
 figure{display:table}
 figcaption{display:table-caption;caption-side:bottom;font-size: 80%;font-style: italic}
 </style>
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
