--- a/liwos/sagalas/geschied.htm
+++ b/liwos/sagalas/geschied.htm
@@ -13,7 +13,7 @@
 		<link href="../css/stijlhtml5.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<style>img {float:right}</style>
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
