--- a/liwos/sagalas/hadrfont.htm
+++ b/liwos/sagalas/hadrfont.htm
@@ -16,7 +16,7 @@
 figure{display:table}
 figcaption{display:table-caption;caption-side:bottom;font-size: 80%;font-style: italic}
 </style>
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
