--- a/liwos/catalan/cataltxt.htm
+++ b/liwos/catalan/cataltxt.htm
@@ -53,7 +53,13 @@
 <h1>Catalaanse teksten</h1>
 <span class="image main"><img src="../images/pic13.jpg" alt="" /></span>
 <h2>Uitdrijving Joden uit Collioure in 1493</h2>
-<p>Sinds 1995 herdenkt een monument, een metalen constructie die een zeil voorstelt, geplaatst aan de voet van het kasteel van de vroegere koningen van Mallorca, deze sombere gebeurtenis.</p>
+<p>Sinds 1995 herdenkt een monument, een metalen constructie die een zeil voorstelt, gerealiseerd door <a href="https://www.francesca-caruana.com/bio">Francesca Caruana</a> en geplaatst aan de voet van het kasteel van de vroegere koningen van Mallorca, deze sombere gebeurtenis.</p>
+
+<figure>
+<img src="soleils-collioure1.jpg" alt="monument uitdrijving Joden uit Collioure in 1493" width="448" height="600" />
+<figcaption>Foto: <a href="http://publicartmuseum.net/wiki/Soleils_port%C3%A9s_(Francesca_Caruana)">Publicartmuseum.net</a>; licensie onder <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.</figcaption>
+</figure>
+<hr />
 <p style="color:green">Commemoració de l' expulsió del poble català jueu. De Cotlliure, pel novembre del 1493, marxaren els 39 últims jueus no conversos del Rosselló, foragitats per la inquisició i els seus reis asservits
 (familes: G. N. Mossé, Fuentes, Asday, Stelina, Bendit, Nissim, Salomon, de Larat, Petrossa, de Piera, N. Mossé, Jacob, La Lobela i un nen embarcats en el <i>"Santa Maria i Sant Cristófol"</i>).
 <cite>"Sols portats"</cite>, escultura de Francesca Caruana</p>
