--- a/liwos/catalan/cursus.htm
+++ b/liwos/catalan/cursus.htm
@@ -75,7 +75,8 @@ li {margin-left:50px;list-style-position:outside;}
 <li><a href="#Aanwijzende">Aanwijzende voornaamwoorden</a></li>
 <li><a href="#Bezittelijke">Bezittelijke voornaamwoorden</a></li>
 <li><a href="#Betrekkelijke">Betrekkelijke voornaamwoorden</a></li>
-<li><a href="#Bijwoorden">Bijwoorden</a></li></ul>
+<li><a href="#Bijwoorden">Bijwoorden</a></li>
+<li><a href="cataltxt.htm">Teksten</a></li></ul>
 </nav>
 </header>
 
