--- a/liwos/index.html
+++ b/liwos/index.html
@@ -104,10 +104,10 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a ="">
-										<h2>In voorbereiding</h2>
+									<a href="steden/soedan.htm">
+										<h2>Vonden Belgische geleerden in 1985 vier neolithische steden in Soedan?</h2>
 										<div class="content">
-											<p>In voorbereiding</p>
+											<p>Tijdens een expeditie van de Universiteit Gent en het Belgisch leger om de verwoestijning van voorheen vrij vruchtbare savanne te 												bestuderen, werden in Darfur vier oude nederzettingen ontdekt.</p>
 										</div>
 									</a>
 								</article>
