--- a/liwos/latin/latin.htm
+++ b/liwos/latin/latin.htm
@@ -56,6 +56,8 @@
 zoals Erna Appeltans, Caesar Bertens, <a href="#marcel">Marcel Darquennes</a> en <a href="#roger">Roger Geerts</a>. Latijnse teksten en opschriften met historische en kunsthistorische relevantie blijven me boeien.</p>
 <nav>
 <ul>
+<li><a href="arausio.htm">De kadastrale documenten van de Colonia Julia Firma Secundanorum Arausio (Orange)</a></li>
+
 <li><a href="plinius.htm">Plinius, de auteur als pater familias (vertaling van brieven)</a></li>
 
 <li><a href="hymne.htm">Het timpaan te Sainte-Jalle en de hymnen bij de dageraad van Ambrosius en
