--- a/liwos/latin/arausio.htm
+++ b/liwos/latin/arausio.htm
@@ -9,7 +9,7 @@
 		<title>De kadastrale documenten van de Colonia Julia Firma Secundanorum Arausio - nu Orange</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="keywords" lang="nl" content="" />
+		<meta name="keywords" lang="nl" content="Arausio, Orange, kadaster, cadastre, centuriatie, centuriation, Piganiol, kardo, decumanus, Tricastini" />
 		<link href="../css/stijlhtml5.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<style>
