--- a/liwos/index.html
+++ b/liwos/index.html
@@ -11,7 +11,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="css/stijlhtml5.css" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<style>header h1 {color: hsl(0,0%,20%);}</style>
+		<style>header h1 {color: hsl(0,0%,20%);}
+		a+h2 {color:white}
+		</style>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -44,6 +46,7 @@
 							<li><a href="catalan/cursus.htm">Catalaanse cursus</a></li>
 							<li><a href="sagalas/geschied.htm">Geschiedenis Sagalassos</a></li>
 							<li><a href="sagalas/plan.htm">Stadsplan Sagalassos</a></li>
+							<li><a href="oudheden/transire.htm">Transitiestudies</a></li>
 						</ul>
 					</nav>
 
@@ -52,7 +55,7 @@
 						<div class="inner">
 							<header>
 								<h1>Welkom op de <span>Li</span>erse <span>W</span>ebsite voor <span>O</span>udheidkundige <span>S</span>tudies</h1>
-								<p>Dit is de voortzetting van onze site op users.skynet.be/liwos die twintig (!) jaar online was. De provider heeft beslist om geen gratis webruimte meer ter beschikking te stellen. We hebben tenslotte gekozen voor hosting bij het onlineplatform Github, dat toelaat eigen geschreven code en door derden ontworpen templates te gebruiken. Via zulke templates is voortaan <i lang="en">Responsive Design</i> mogelijk. Onze serververbinding volgt nu ook het https-protocol. Nog niet alle bestanden zijn getransfereerd. In het begin geef ik prioriteit aan de onderdelen Latijnse teksten, Catalaanse basiscursus, Occitaanse teksten en aan het archeologisch project van Sagalassos. Het onderdeel 'transitiestudies' is verouderd en vraagt herwerking, terwijl de archiefpagina's van het oude Lierse 11.11.11.-comité (gestopt in 2009) voorgoed zullen verdwijnen. Elke pagina heeft nu in de rechterbovenhoek een snelmenu 'navigatie'.</p>
+								<p>Dit is de voortzetting van onze site op users.skynet.be/liwos die twintig (!) jaar online was. De provider heeft beslist om geen gratis webruimte meer ter beschikking te stellen. We hebben tenslotte gekozen voor hosting bij het onlineplatform Github, dat toelaat eigen geschreven code en door derden ontworpen templates te gebruiken. Via zulke templates is voortaan <i lang="en">Responsive Design</i> mogelijk. Onze serververbinding volgt nu ook het https-protocol. Nog niet alle bestanden zijn getransfereerd. In het begin geef ik prioriteit aan de onderdelen Latijnse teksten, Catalaanse basiscursus, Occitaanse teksten en aan het archeologisch project van Sagalassos. De archiefpagina's van het oude Lierse 11.11.11.-comité (gestopt in 2009) zijn verwijderd. Elke pagina heeft nu in de rechterbovenhoek een snelmenu 'navigatie'.</p>
 								<p>Template designed by <a href="http://html5up.net">HTML5 UP</a>.</p>
 							</header>
 							<section class="tiles">
@@ -89,7 +92,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style1">
+								<article class="style4">
 									<span class="image">
 										<img src="images/pic09.jpg" alt="" />
 									</span>
@@ -107,11 +110,21 @@
 									<a href="steden/soedan.htm">
 										<h2>Vonden Belgische geleerden in 1985 vier neolithische steden in Soedan?</h2>
 										<div class="content">
-											<p>Tijdens een expeditie van de Universiteit Gent en het Belgisch leger om de verwoestijning van voorheen vrij vruchtbare savanne te 												bestuderen, werden in Darfur vier oude nederzettingen ontdekt.</p>
+											<p>Tijdens een expeditie van de Universiteit Gent en het Belgisch leger om de verwoestijning van voorheen vrij vruchtbare savanne te bestuderen, werden in Darfur vier oude nederzettingen ontdekt.</p>
 										</div>
 									</a>
 								</article>
-								
+								<article class="style6">
+									<span class="image">
+										<img src="images/pic05.jpg" alt="" />
+									</span>
+									<a href="transire.htm">
+										<h2>Transitiestudies</h2>
+										<div class="content">
+											<p>Namen de Germaanse koninkrijken die in de vroege Middeleeuwen de plaats innamen van het Romeinse Rijk een nieuwe start of leefden nog tradities uit de antieke Oudheid voort in West-Europa? </p>
+										</div>
+									</a>
+								</article>
 							</section>
 						</div>
 					</div>
