--- a/liwos/index.html
+++ b/liwos/index.html
@@ -118,7 +118,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="transire.htm">
+									<a href="oudheden/transire.htm">
 										<h2>Transitiestudies</h2>
 										<div class="content">
 											<p>Namen de Germaanse koninkrijken die in de vroege Middeleeuwen de plaats innamen van het Romeinse Rijk een nieuwe start of leefden nog tradities uit de antieke Oudheid voort in West-Europa? </p>
