--- a/liwos/latin/vaison.htm
+++ b/liwos/latin/vaison.htm
@@ -160,7 +160,7 @@ Op verzoek van mediëvisten (<a href="http://www.unicode.org/L2/L2006/06027-n302
 
 <h2>Meer beelden en links</h2>
 
-<p>De website van de stad <a href="http://www.vaison-la-romaine.com/spip.php?page=histoire-et-patrimoine">Vaison</a>, onderdeel <i>Histoire et patrimoine</i>, geeft veel info over de geschiedenis, over de archeologische sites Puymin en la Villasse, over de kathedraal Notre-Dame-de-Nazareth in de zuidwestelijke hoek van de antieke stad, over de kloostergang, over de kapel Saint-Quenin en over het museum Théo Desplans (om het bij de benedenstad te houden).</p>
+<p>De website van de stad <a href="https://www.vaison-la-romaine.com">Vaison</a>, onderdeel <a href="https://www.provenceromaine.com/"><i>Patrimoine</i></a>, geeft veel info over de geschiedenis, over de archeologische sites Puymin en la Villasse, over de kathedraal Notre-Dame-de-Nazareth in de zuidwestelijke hoek van de antieke stad, over de kloostergang, over de kapel Saint-Quenin en over het museum Théo Desplans (om het bij de benedenstad te houden).</p>
 <img src="vaison/vaisoncloitre.png" alt="kloostergang van Vaison" title="www.vaison-la-romaine.com" width="597" height="448" />
 
 <p>De vereniging Belisama en haar website <a href="http://www.vaison-musees.com/accueil.php">Vaison dans les musées du monde</a> geeft een overzicht van de vondsten die ooit werden gedaan op het grondgebied van <i lang="la">Vasio Vocontiorum</i> en waar ze worden bewaard.</p>
