--- a/liwos/index.html
+++ b/liwos/index.html
@@ -138,7 +138,7 @@
 									
 									<li><a href="https://www.facebook.com/ronald.decat/" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
 									
-									<li><a href="mailto:Ronald.De.Cat@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="mailto:ronald.de.cat@skynet.be" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
