--- a/liwos/index.html
+++ b/liwos/index.html
@@ -139,7 +139,7 @@
 									<li><a href="https://www.facebook.com/ronald.decat/" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
 									
 									<li><a onClick="javascript:window.open('mailto:ronald.de.cat@gmail.com', 'mail');event.preventDefault()" href="mailto:ronald.de.cat@gmail.com" target="_blank" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-									
+									<!-- Credit to https://stackoverflow.com/a/9880404/1107020 -->
 								</ul>
 							</section>
 							<ul class="copyright">
