--- a/liwos/sagalas/plan.htm
+++ b/liwos/sagalas/plan.htm
@@ -72,7 +72,7 @@ figcaption{display:table-caption;caption-side:bottom;font-size: 80%;font-style: 
 <div class="update">
 <p>Op 21 februari 2021 overleed op 72-jarige leeftijd <b>professor Marc Waelkens</b>, de ontdekker van Sagalassos. <a href="memoriam.htm">In memoriam.</a></p>
 <figure>
-<img src="https://www.arts.kuleuven.be/sagalassos/onderzoek/resolveuid/5e27439fd49f4d57bb7d3fba960785b3/image" alt="professor Marc Waelkens tijdens één van de hoogtepunten van zijn loopbaan: de ontdekking van de keizersbeelden in het bad-gymnasium van Sagalassos" title="https://www.arts.kuleuven.be/sagalassos/onderzoek/staf" />
+<img src="https://www.arts.kuleuven.be/sagalassos/research/photos/marc-photo-1.jpg" alt="professor Marc Waelkens tijdens één van de hoogtepunten van zijn loopbaan: de ontdekking van de keizersbeelden in het bad-gymnasium van Sagalassos" title="https://www.arts.kuleuven.be/sagalassos/onderzoek/staf" />
 <figcaption>Professor Marc Waelkens tijdens één van de hoogtepunten van zijn loopbaan: de ontdekking van de keizersbeelden van Hadrianus en Marcus Aurelius in het bad-gymnasium van Sagalassos.</figcaption>
 </figure>
 </div>
